--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
-                            <h1 class="promo-block-title">Alex <br/> Teseira</h1>
-                            <p class="promo-block-text">Web Designer &amp; Front-end Developer</p>
+                            <h1 class="promo-block-title">Ashok <br/> Gupta</h1>
+                            <p class="promo-block-text">Software Engineering </p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://twitter.com/keenthemes" class="social-icons"><i class="icon-social-facebook"></i></a></li>
