--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Aircv" Frontend Freebie</title>
+        <title>Ashok Gupta - PMP, Agile Expert, Coach,  </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -54,7 +54,6 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
                                 <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
                             </a>
                         </div>
