--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Ashok Gupta - PMP, Agile Expert, Coach,  </title>
+        <title>Ashok Gupta - PMP, Project-Program Management & Agile Expert, Coach, Blogger</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -86,7 +86,7 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Ashok <br/> Gupta</h1>
-                            <p class="promo-block-text">Software Engineering </p>
+                            <p class="promo-block-text">Software Engineering | Delivery, Project Management | People/Talent Expert | Coach & Trainer</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://twitter.com/keenthemes" class="social-icons"><i class="icon-social-facebook"></i></a></li>
