--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
                             <p class="promo-block-text">Software Engineering | Delivery, Project Management | People/Talent Expert | Coach & Trainer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://twitter.com/keenthemes" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="https://twitter.com/keenthemes" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="https://dribbble.com/keenthemes" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="https://www.behance.net/keenthemes" class="social-icons"><i class="icon-social-behance"></i></a></li>
-                            <li><a href="https://www.behance.net/keenthemes" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <!--li><a href="https://twitter.com/keenthemes" class="social-icons"><i class="icon-social-facebook"></i></a></li-->
+                            <li><a href="https://twitter.com/shokiegupta" class="social-icons"><i class="icon-social-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/ashokgupta" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -444,19 +442,19 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Location</h5>
-                                    <a href="http://keenthemes.com/">Brookyln, New York</a>
+                                    <a href="https://www.linkedin.com/in/ashokgupta">Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
-                                    <a href="http://keenthemes.com/">+77 234 548 00 00</a>
+                                    +91 98 106 99 146
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:#">alex.teseira@gmail.com</a>
+                                    <a href="mailto:#">ashokguptapmp@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                    <a href="http://keenthemes.com/">alex.teseira.com</a>
+                                    <a href="https://ashokguptapmp.github.io">You are here!</a>
                                 </div>
                             </div>
                         </div>
