--- a/index.html
+++ b/index.html
@@ -113,8 +113,14 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I'm Alex Teseira, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>I'm Alex Teseira, Comprehensive experience in project and delivery management, and software engineering with global, remote, matrix teams. PMI PMP certified with strong experience on process improvement initiatives, and COE/COP development and leadership. An avid trainer and coach, I bring nearly 20 years of experience in software engineering (#programmer, #solutionarchitect, #projectmanager #programmanager, #deliverymanager, #engineeringmanager, #servicedeliverymanager, #changemanager)</p>
+                            <p>I am a solution-oriented person who thrives in a challenging, fast-paced environment where my performance directly impacts the bottom line. I bring a strong background in IT combined with extensive experience in managing a variety of projects for global clients. My experience spans across all phases of software engineering from setting up new engineering teams, managing global teams, leading end to end IT delivery including pre-sales, inception, scoping, design reviews, project management, delivery and service support. 
+
+I write on LinkedIn - Pulse, PMI Agile CoP, and have my own blog as well. Here are quick links :
+1) My blog on Agile Scrum - http://agilescrumsimplified.blogspot.com
+2) My page on LinkedIn Pulse: http://goo.gl/sJozt5
+3) My blog page on PMI - Agile Community of Practice - http://goo.gl/kbk0UG (PMI members only)
+4) Published a research paper "Determining the Social Network Worth: Analysis, Quantitative Approach, and Application" (mentored an MTech student) - https://peerj.com/preprints/1154.pdf</p>
                         </div>
 
                         <!-- Progress Box -->
