--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-active" src="img/ashokgupta.png" alt="Asentus Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
