--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         <div class="margin-b-60">
                             <p>I'm Ashok Gupta, having comprehensive experience in project & delivery management, and building successful software engineering teams. PMI PMP certified with strong experience on process improvement initiatives, COE/COP and leadership. An avid trainer and coach, I bring nearly 20 years of experience in software engineering (#programmer, #solutionarchitect, #projectmanager #programmanager, #deliverymanager, #engineeringmanager, #servicedeliverymanager, #changemanager)</p>
                             <p>I am a solution-oriented person; I bring a strong background in IT combined with extensive experience in managing a variety of projects for global clients. My experience spans across all phases of software engineering from setting up new engineering teams, managing global teams, leading end to end IT delivery including pre-sales, inception, scoping, design reviews, project management, delivery and service support.</p>
-<p>I ideate, code, read, write during free time, check out my work :
-<ul>
+<p style="font-size: 15px;font-weight: 400;font-family: Hind,sans-serif;color: #a6a7aa;line-height: 1.4;margin-bottom: 15px;">I ideate, code, read, write during free time, check out my work :
+<ul style="font-size: 15px;font-weight: 400;font-family: Hind,sans-serif;color: #a6a7aa;line-height: 1.4;margin-bottom: 15px;">
 <li>My blog on Agile Scrum - http://agilescrumsimplified.blogspot.com</li>
 <li>My articles on LinkedIn Pulse: http://goo.gl/sJozt5</li>
 <li>My blog page on PMI - Agile Community of Practice - http://goo.gl/kbk0UG (PMI members only)</li>
