--- a/index.html
+++ b/index.html
@@ -125,27 +125,27 @@
 
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>PHP <span class="color-heading pull-right">87%</span></h5>
+                            <h5>Project Management <span class="color-heading pull-right">9/10</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>HTML5 <span class="color-heading pull-right">96%</span></h5>
+                            <h5>Stakeholder Management <span class="color-heading pull-right">8.5/10%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>JavaSript <span class="color-heading pull-right">52%</span></h5>
+                            <h5>People-Talent Management <span class="color-heading pull-right">9/10</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Photoshop <span class="color-heading pull-right">77%</span></h5>
+                            <h5>Product-Software Engineering <span class="color-heading pull-right">9.5</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="95"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
