--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
-                                    +91 98 106 99 146
+                                    <a href="tel:+919810699146">+91 98 106 99 146</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:#">ashokguptapmp@gmail.com</a>
+                                    <a href="mailto:ashokguptapmp@gmail.com">ashokguptapmp@gmail.com</a>
                                 </div>
                             </div>
                         </div>
