--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Location</h5>
+                                    <h5>Current Location</h5>
                                     <a href="https://www.linkedin.com/in/ashokgupta">Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
