--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Current Location</h5>
-                                    <a href="https://www.linkedin.com/in/ashokgupta">Delhi/NCR Region</a>
+                                    <a href="https://www.linkedin.com/in/ashokgupta">Chandigarh | Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
