--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Awards & Certifications</h2>
-                                <p>Winner, achiever, learner.</p>
+                                <p>winner, achiever, learner...</p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
@@ -212,6 +212,19 @@
                                         <a target="_blank" href="https://www.ahip.org/course/healthcare-management-an-introduction-ahm-250/" class="content-wrapper-link"></a>
                                     </div>
                                 </div>
+                             <div class="row row-space-2 margin-b-4">
+                                <div class="col-md-4 md-margin-b-4">
+                                    <div class="service" data-height="height">
+                                        <div class="service-element">
+                                            <i class="service-icon icon-badge"></i>
+                                        </div>
+                                        <div class="service-info">
+                                            <h3><img width="50%" src="/img/ms_sw_arch_pt.jpg"><img width="40%" src="/img/ms_sw_arch_pt.jpg"><br>Microservices Architecture</h3>
+                                            <p class="margin-b-5">Microservices Software Architecture: Patterns and Techniques</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            
                             </div>
                             <!--// end row -->
                         </div>
