--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                             <i class="service-icon icon-badge"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3><img width="50%" src="/img/ms_sw_arch_pt.jpg"><img width="40%" src="/img/ms_sw_arch_pt.jpg"><br>Microservices Architecture</h3>
+                                            <h3><img width="50%" src="/img/ms_sw_arch_pt.jpg"><br>Microservices Architecture</h3>
                                             <p class="margin-b-5">Microservices Software Architecture: Patterns and Techniques</p>
                                         </div>
                                     </div>
