--- a/index.html
+++ b/index.html
@@ -440,12 +440,12 @@
                                     <a href="https://www.linkedin.com/in/ashokgupta">Chandigarh | Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Phone</h5>
-                                    <a href="tel:+919810699146">+91 98 106 99 146</a>
+                                    <h5>Ring</h5>
+                                    <a href="#">+91 (India) 98-106-99-146</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
-                                    <h5>Email</h5>
-                                    <a href="mailto:ashokguptapmp@gmail.com">ashokguptapmp@gmail.com</a>
+                                    <h5>Letter</h5>
+                                    <a href="#">ashokguptapmp <at> gmail</a>
                                 </div>
                             </div>
                         </div>
