--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Letter</h5>
-                                    <a href="#">ashokguptapmp <at> gmail</a>
+                                    <a href="#">ashokguptapmp [at] gmail</a>
                                 </div>
                             </div>
                         </div>
