--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
                                     <a href="https://www.linkedin.com/in/ashokgupta">Chandigarh | Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Ring</h5>
-                                    <a href="#">+91 (India) 98-106-99-146</a>
+                                    <h5>Looking for mentorship/guidance?</h5>
+                                    <a href="https://topmate.io/rise_ashok/">https://topmate.io/rise_ashok/</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Letter</h5>
