--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                     <a href="https://www.linkedin.com/in/ashokgupta">Chandigarh | Delhi/NCR Region</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Looking for mentorship/guidance?</h5>
+                                    <h5>Need 1x1 mentorship?</h5>
                                     <a href="https://topmate.io/rise_ashok/">https://topmate.io/rise_ashok/</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
