--- a/index.html
+++ b/index.html
@@ -260,6 +260,46 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay" data-toggle="tooltip" data-placement="auto" title="Click for details...">
+                                        <img class="full-width img-responsive" src="img/sq-logo.jpg" alt="Portfolio Image" >
+                                    </div>
+                                    <div class="work-popup-overlay">
+                                        <div class="work-popup-content">
+                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <div class="margin-b-30">
+                                                <h3 class="margin-b-5">Amazon</h3>
+                                                <span>Amazon India</span>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-12 work-popup-content-divider sm-margin-b-30">
+                                                    <div class="margin-b-30">
+                                                        <p>Project Lead >> Project Manager >> Senior Project Manager</p>
+                                                        <p>
+                                                            * Led product & application portfolio with 90+ members across 4 global locations.<br>* Interesting mix of technology stack - .NET, SQL, BPM (Pega PRPC), Documentum, Java and Mainframes.
+                                                            <br>* Built and directed two CoPs and a bunch of process improvement initiatives for a large portfolio.
+                                                            <br>* Successfully led service center application portfolio including 5 diverse applications.
+                                                        </p>
+                                                        <ul class="list-inline work-popup-tag">
+                                                            <li class="work-popup-tag-item">Technical Manager,</li>
+                                                            <li class="work-popup-tag-item">Program Manager,</li>
+                                                            <li class="work-popup-tag-item">Delivery Manager</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <!--div class="col-sm-4">
+                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                        <p class="margin-b-5"><strong></strong></p>
+                                                    </div>
+                                                </div-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End Work -->
+                            </div>
+                            <div class="bg-color-sky-light masonry-grid-item col-xs-12 col-sm-6 col-md-8 margin-b-4">
+                                <!-- Work -->
+                                <div class="work work-popup-trigger">
+                                    <div class="work-overlay" data-toggle="tooltip" data-placement="auto" title="Click for details...">
                                         <img class="full-width img-responsive" src="img/uhg.png" alt="Portfolio Image" >
                                     </div>
                                     <div class="work-popup-overlay">
