--- a/index.html
+++ b/index.html
@@ -267,16 +267,14 @@
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Amazon</h3>
-                                                <span>Amazon India</span>
+                                                <span>World's most customer centeric company.</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-12 work-popup-content-divider sm-margin-b-30">
                                                     <div class="margin-b-30">
-                                                        <p>Project Lead >> Project Manager >> Senior Project Manager</p>
+                                                        <p>Software Development Manager | Sr. Technical Program Manager</p>
                                                         <p>
-                                                            * Led product & application portfolio with 90+ members across 4 global locations.<br>* Interesting mix of technology stack - .NET, SQL, BPM (Pega PRPC), Documentum, Java and Mainframes.
-                                                            <br>* Built and directed two CoPs and a bunch of process improvement initiatives for a large portfolio.
-                                                            <br>* Successfully led service center application portfolio including 5 diverse applications.
+                                                            Building scalable solutions that impact customers globally. Building and leading top notch tech teams.
                                                         </p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item">Technical Manager,</li>
