--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
                             <p>Ashok Gupta is software Product Engineering expert, agile advocate, avid trainer and coach. I bring 18+ years of experience in software development, engineering, consulting, management and everything in between. I have had opportunity to work for clients across 6 continents, traveled to USA, UK, UAE, Singapore, Malaysia, Ukraine. He is having comprehensive experience in <b>project & delivery management</b>, building successful <b>software engineering</b> teams. <b>PMI PMP certified</b> with strong experience on process improvement initiatives, COE/COP and leadership. An avid trainer and coach, I bring nearly 20 years of experience in software engineering (programmer, solution architect, project-program-delivery manager, engineering manager, service delivery manager, change manager)</p>
                             <p>I am a solution-oriented person; I bring a <b>strong background in IT</b> combined with extensive experience in managing a variety of projects for <b>global clients</b>. My experience spans across all phases of software engineering (seeding new teams, managing global teams, <b>end to end IT delivery</b> including pre-sales, inception, scoping, design reviews, project management, delivery and service support).</p>
                             <p>
-                                During free-time; I ideate, code, read, write! Looking for one-on-one guidance or mentorship? Book a slot here >> https://topmate.io/rise_ashok/
+                                During free-time; I ideate, code, read, write! 
+                                I've been getting a lot of DMs for guidance, so decided to take action on it. I'm excited to help folks out and 
+                                give back to the community. Feel free to reach out if you have any questions or looking for one-on-one guidance or mentorship?
+                                Book a slot here >> <br>
+                                <a href="https://topmate.io/rise_ashok/" target="_new"><img src="img/topmate.png"></a>
                                 <ul style="font-size: 15px;font-weight: 400;font-family: Hind,sans-serif;color: #a6a7aa;line-height: 1.4;margin-bottom: 15px;">
                                     <!--li style="font-weight: 400;color: #a6a7aa;">My blog on <a href="http://agilescrumsimplified.blogspot.com">Agile Scrum Simplified!</a></li-->
                                     <!--li style="font-weight: 400;color: #a6a7aa;">A few of <a href="http://goo.gl/sJozt5">my artices on LinkedIn Pulse</a></li-->
