--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                                 I've been getting a lot of DMs for guidance, so decided to take action on it. I'm excited to help folks out and 
                                 give back to the community. Feel free to reach out if you have any questions or looking for one-on-one guidance or mentorship?
                                 Book a slot here >> <br>
-                                <a href="https://topmate.io/rise_ashok/" target="_new"><img src="img/topmate.png"></a>
+                                <a style="width:300px" href="https://topmate.io/rise_ashok/" target="_new"><img src="img/topmate.png"></a>
                                 <ul style="font-size: 15px;font-weight: 400;font-family: Hind,sans-serif;color: #a6a7aa;line-height: 1.4;margin-bottom: 15px;">
                                     <!--li style="font-weight: 400;color: #a6a7aa;">My blog on <a href="http://agilescrumsimplified.blogspot.com">Agile Scrum Simplified!</a></li-->
                                     <!--li style="font-weight: 400;color: #a6a7aa;">A few of <a href="http://goo.gl/sJozt5">my artices on LinkedIn Pulse</a></li-->
                                     <!--li style="font-weight: 400;color: #a6a7aa;"><a href="http://goo.gl/kbk0UG">My blog page on PMI ACoP</a> (Agile Community of Practice - PMI members only)</li-->
-                                    <li style="font-weight: 400;color: #a6a7aa;">Served as mentor, guide for research paper "<a href="https://peerj.com/preprints/1154.pdf">Determining the Social Network Worth: Analysis, Quantitative Approach, and Application</a>" (M.Tech. Research Paper)</li>
+                                    <!--li style="font-weight: 400;color: #a6a7aa;">Served as mentor, guide for research paper "<a href="https://peerj.com/preprints/1154.pdf">Determining the Social Network Worth: Analysis, Quantitative Approach, and Application</a>" (M.Tech. Research Paper)</li-->
                                 </ul>
                             </p>
                         </div>
